# FED-NLP-Project

./: .gitignore  README.md
fed-communications-gatherer/: Pipfile  README.md  analysis.py  main.py  pyproject.toml
fed-communications-gatherer/src/: definitions.py  main.py
fed-communications-gatherer/src/features/: EntitySentimentAnalyzer.py
fed-communications-gatherer/src/fomc/: FOMCClient.py  FOMCCommunicationDocsService.py  FOMCDoc.py  FOMCDocSample.py  FOMCFeatureGenerator.py
fed-communications-gatherer/src/plot/: PlotterUtil.py
fed-model-nlp/: README.md  main_NaiveBayes.py  main_SVM.py  main_nlp.py  pyproject.toml
fed-model-nlp/fed_model_nlp/: definitions.py
fed-model-nlp/fed_model_nlp/transformers/: EntitySentimentTransformer.py  NumOfParagraphsTransformer.py  NumOfWordsTransformer.py  POSTagsCountTransformer.py
fed-model-nlp/samples/fomc_speeches/: 1994-02-04-St-sample.json  1994-02-04-St.json  1994-03-22-St-sample.json  1994-03-22-St.json  1994-04-18-St-sample.json  1994-04-18-St.json  1994-05-17-St-sample.json  1994-05-17-St.json  1994-08-16-St-sample.json  1994-08-16-St.json  1994-11-15-St-sample.json  1994-11-15-St.json  1995-02-01-St-sample.json  1995-02-01-St.json  1995-07-06-St-sample.json  1995-07-06-St.json  1995-12-19-St-sample.json  1995-12-19-St.json  1996-01-31-St-sample.json  1996-01-31-St.json  1997-03-25-St-sample.json  1997-03-25-St.json  1998-09-29-St-sample.json  1998-09-29-St.json  1998-10-15-St-sample.json  1998-10-15-St.json  1998-11-17-St-sample.json  1998-11-17-St.json  1999-05-18-St-sample.json  1999-05-18-St.json  (+372 more)
(+5 files in other folders)
